trying to fix styling on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -252,7 +252,7 @@ button{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     @media only screen and (max-width: 640px) {
         font-size: 10px;
-        top: -53%;
+        top: -55%;
         left: 20%;}
 }
 
